--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+        
         <link data-trunk rel="css" href="styles.css">
     </head>
     <body></body>
