--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
         
         <link data-trunk rel="css" href="styles.css">
+        <link data-trunk rel="copy-dir" href="./img">
+
     </head>
     <body></body>
 </html>
